src/main/util/CubeXParser.java
// Generated from CubeXParser.g4 by ANTLR 4.0

package main.util;

import java.util.Arrays;
import main.expression.*;
import main.statement.*;
import main.program.*;
import main.type.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CubeXParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT1=54, COMMENT2=55, CLASS=12, LBRACK=50, STAR=25, WHILE=5, AMP=46, 
		PLUSPLUS=23, LANGLE=38, RANGLEEQUAL=40, LBRACE=52, BANGEQUAL=43, THING=14, 
		FOR=6, NAMEUSINGLE=17, EQUALEQUAL=42, DOTDOT=30, DOTDOTDOT=34, LESSLESS=33, 
		LPAREN=48, IF=3, RPAREN=49, SLASH=26, IN=7, COMMA=37, EQUAL=44, RETURN=8, 
		NOTHING=15, PLUS=28, PIPE=47, SUPER=11, RANGLE=41, DOT=36, RBRACK=51, 
		RBRACE=53, PERCENT=27, DASH=29, LESSDOTDOT=35, ELSE=4, LESSDOT=31, BANG=24, 
		SEMICOLON=22, INT=16, NAMEL=19, TRUE=1, DOTLESS=32, NAMEU=18, COLON=21, 
		WS=56, LANGLEEQUAL=39, INTERFACE=9, FUN=10, FALSE=2, EXTENDS=13, COLONEQUAL=45, 
		STRING=20;
	public static final String[] tokenNames = {
		"<INVALID>", "'true'", "'false'", "'if'", "'else'", "'while'", "'for'", 
		"'in'", "'return'", "'interface'", "'fun'", "'super'", "'class'", "'extends'", 
		"'Thing'", "'Nothing'", "INT", "NAMEUSINGLE", "NAMEU", "NAMEL", "STRING", 
		"':'", "';'", "'++'", "'!'", "'*'", "'/'", "'%'", "'+'", "'-'", "'..'", 
		"'<.'", "'.<'", "'<<'", "'...'", "'<..'", "'.'", "','", "'<'", "'<='", 
		"'>='", "'>'", "'=='", "'!='", "'='", "':='", "'&'", "'|'", "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "COMMENT1", "COMMENT2", "WS"
	};
	public static final int
		RULE_type = 0, RULE_typelist = 1, RULE_typevarlist = 2, RULE_arglist = 3, 
		RULE_scheme = 4, RULE_exprlist = 5, RULE_expr = 6, RULE_stat = 7, RULE_functiondecl = 8, 
		RULE_function = 9, RULE_interfacex3 = 10, RULE_classx3 = 11, RULE_testprogram = 12, 
		RULE_program = 13;
	public static final String[] ruleNames = {
		"type", "typelist", "typevarlist", "arglist", "scheme", "exprlist", "expr", 
		"stat", "functiondecl", "function", "interfacex3", "classx3", "testprogram", 
		"program"
	};

	@Override
	public String getGrammarFileName() { return "CubeXParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public CubeXParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TypeContext extends ParserRuleContext {
		public int _p;
		public CubeXType x;
		public TypeContext t1;
		public Token v;
		public TypelistContext t;
		public TypeContext t2;
		public TerminalNode NOTHING() { return getToken(CubeXParser.NOTHING, 0); }
		public TerminalNode THING() { return getToken(CubeXParser.THING, 0); }
		public TerminalNode NAMEUSINGLE() { return getToken(CubeXParser.NAMEUSINGLE, 0); }
		public TerminalNode AMP() { return getToken(CubeXParser.AMP, 0); }
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TypelistContext typelist() {
			return getRuleContext(TypelistContext.class,0);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TerminalNode NAMEU() { return getToken(CubeXParser.NAMEU, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TypeContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState, _p);
		TypeContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, RULE_type);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			switch (_input.LA(1)) {
			case NAMEUSINGLE:
				{
				setState(29); ((TypeContext)_localctx).v = match(NAMEUSINGLE);
				((TypeContext)_localctx).x =  new CubeXTypeVariable((((TypeContext)_localctx).v!=null?((TypeContext)_localctx).v.getText():null));
				}
				break;
			case NAMEU:
				{
				 boolean ttest=false;
				setState(32); ((TypeContext)_localctx).v = match(NAMEU);
				setState(35);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					ttest=true;
					setState(34); ((TypeContext)_localctx).t = typelist();
					}
					break;
				}
				((TypeContext)_localctx).x =  new CubeXTypeClass((((TypeContext)_localctx).v!=null?((TypeContext)_localctx).v.getText():null), ttest?((TypeContext)_localctx).t.x:null);
				}
				break;
			case THING:
				{
				setState(38); match(THING);
				 ((TypeContext)_localctx).x =  CubeXType.getThing();
				}
				break;
			case NOTHING:
				{
				setState(40); match(NOTHING);
				 ((TypeContext)_localctx).x =  CubeXType.getNothing();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(51);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState, _p);
					_localctx.t1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_type);
					setState(44);
					if (!(3 >= _localctx._p)) throw new FailedPredicateException(this, "3 >= $_p");
					setState(45); match(AMP);
					setState(46); ((TypeContext)_localctx).t2 = type(4);
					 ((TypeContext)_localctx).x =  new CubeXTypeIntersection(((TypeContext)_localctx).t1.x,((TypeContext)_localctx).t2.x);
					}
					} 
				}
				setState(53);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class TypelistContext extends ParserRuleContext {
		public ArrayList<CubeXType> x;
		public TypeContext t;
		public TerminalNode COMMA(int i) {
			return getToken(CubeXParser.COMMA, i);
		}
		public TerminalNode RANGLE() { return getToken(CubeXParser.RANGLE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(CubeXParser.COMMA); }
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TerminalNode LANGLE() { return getToken(CubeXParser.LANGLE, 0); }
		public TypelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typelist; }
	}

	public final TypelistContext typelist() throws RecognitionException {
		TypelistContext _localctx = new TypelistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_typelist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((TypelistContext)_localctx).x = new ArrayList<CubeXType>();
			setState(70);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(55); match(LANGLE);
				setState(67);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << THING) | (1L << NOTHING) | (1L << NAMEUSINGLE) | (1L << NAMEU))) != 0)) {
					{
					setState(56); ((TypelistContext)_localctx).t = type(0);
					_localctx.x.add(((TypelistContext)_localctx).t.x);
					setState(64);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(58); match(COMMA);
						setState(59); ((TypelistContext)_localctx).t = type(0);
						_localctx.x.add(((TypelistContext)_localctx).t.x);
						}
						}
						setState(66);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(69); match(RANGLE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypevarlistContext extends ParserRuleContext {
		public ArrayList<CubeXTypeVariable> x;
		public Token v;
		public List<TerminalNode> NAMEUSINGLE() { return getTokens(CubeXParser.NAMEUSINGLE); }
		public TerminalNode COMMA(int i) {
			return getToken(CubeXParser.COMMA, i);
		}
		public TerminalNode NAMEUSINGLE(int i) {
			return getToken(CubeXParser.NAMEUSINGLE, i);
		}
		public TerminalNode RANGLE() { return getToken(CubeXParser.RANGLE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(CubeXParser.COMMA); }
		public TerminalNode LANGLE() { return getToken(CubeXParser.LANGLE, 0); }
		public TypevarlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typevarlist; }
	}

	public final TypevarlistContext typevarlist() throws RecognitionException {
		TypevarlistContext _localctx = new TypevarlistContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typevarlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((TypevarlistContext)_localctx).x =  new ArrayList<CubeXTypeVariable>();
			setState(87);
			_la = _input.LA(1);
			if (_la==LANGLE) {
				{
				setState(73); match(LANGLE);
				setState(84);
				_la = _input.LA(1);
				if (_la==NAMEUSINGLE) {
					{
					setState(74); ((TypevarlistContext)_localctx).v = match(NAMEUSINGLE);
					_localctx.x.add(new CubeXTypeVariable((((TypevarlistContext)_localctx).v!=null?((TypevarlistContext)_localctx).v.getText():null)));
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(76); match(COMMA);
						setState(77); ((TypevarlistContext)_localctx).v = match(NAMEUSINGLE);
						_localctx.x.add(new CubeXTypeVariable((((TypevarlistContext)_localctx).v!=null?((TypevarlistContext)_localctx).v.getText():null)));
						}
						}
						setState(83);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(86); match(RANGLE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArglistContext extends ParserRuleContext {
		public ArrayList<CubeXArgument> x;
		public Token v;
		public TypeContext t;
		public List<TerminalNode> COLON() { return getTokens(CubeXParser.COLON); }
		public TerminalNode COMMA(int i) {
			return getToken(CubeXParser.COMMA, i);
		}
		public List<TerminalNode> NAMEL() { return getTokens(CubeXParser.NAMEL); }
		public List<TerminalNode> COMMA() { return getTokens(CubeXParser.COMMA); }
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TerminalNode NAMEL(int i) {
			return getToken(CubeXParser.NAMEL, i);
		}
		public TerminalNode COLON(int i) {
			return getToken(CubeXParser.COLON, i);
		}
		public ArglistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arglist; }
	}

	public final ArglistContext arglist() throws RecognitionException {
		ArglistContext _localctx = new ArglistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_arglist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ArglistContext)_localctx).x =  new ArrayList<CubeXArgument>();
			setState(105);
			_la = _input.LA(1);
			if (_la==NAMEL) {
				{
				setState(90); ((ArglistContext)_localctx).v = match(NAMEL);
				setState(91); match(COLON);
				setState(92); ((ArglistContext)_localctx).t = type(0);
				_localctx.x.add(new CubeXArgument(new CubeXVariable((((ArglistContext)_localctx).v!=null?((ArglistContext)_localctx).v.getText():null)),((ArglistContext)_localctx).t.x));
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(94); match(COMMA);
					setState(95); ((ArglistContext)_localctx).v = match(NAMEL);
					setState(96); match(COLON);
					setState(97); ((ArglistContext)_localctx).t = type(0);
					_localctx.x.add(new CubeXArgument(new CubeXVariable((((ArglistContext)_localctx).v!=null?((ArglistContext)_localctx).v.getText():null)),((ArglistContext)_localctx).t.x));
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemeContext extends ParserRuleContext {
		public CubeXScheme x;
		public TypevarlistContext t;
		public ArglistContext alist;
		public TypeContext rt;
		public ArglistContext arglist() {
			return getRuleContext(ArglistContext.class,0);
		}
		public TerminalNode COLON() { return getToken(CubeXParser.COLON, 0); }
		public TerminalNode RPAREN() { return getToken(CubeXParser.RPAREN, 0); }
		public TypevarlistContext typevarlist() {
			return getRuleContext(TypevarlistContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(CubeXParser.LPAREN, 0); }
		public SchemeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scheme; }
	}

	public final SchemeContext scheme() throws RecognitionException {
		SchemeContext _localctx = new SchemeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scheme);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); ((SchemeContext)_localctx).t = typevarlist();
			setState(108); match(LPAREN);
			setState(109); ((SchemeContext)_localctx).alist = arglist();
			setState(110); match(RPAREN);
			setState(111); match(COLON);
			setState(112); ((SchemeContext)_localctx).rt = type(0);
			((SchemeContext)_localctx).x =  new CubeXScheme(((SchemeContext)_localctx).t.x, ((SchemeContext)_localctx).alist.x, ((SchemeContext)_localctx).rt.x);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprlistContext extends ParserRuleContext {
		public ArrayList<CubeXExpression> x;
		public ExprContext e;
		public TerminalNode COMMA(int i) {
			return getToken(CubeXParser.COMMA, i);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CubeXParser.COMMA); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprlist; }
	}

	public final ExprlistContext exprlist() throws RecognitionException {
		ExprlistContext _localctx = new ExprlistContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exprlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ExprlistContext)_localctx).x = new ArrayList<CubeXExpression>();
			setState(127);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << INT) | (1L << NAMEU) | (1L << NAMEL) | (1L << STRING) | (1L << BANG) | (1L << DASH) | (1L << LPAREN) | (1L << LBRACK))) != 0)) {
				{
				setState(116); ((ExprlistContext)_localctx).e = expr(0);
				_localctx.x.add(((ExprlistContext)_localctx).e.x);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(118); match(COMMA);
					setState(119); ((ExprlistContext)_localctx).e = expr(0);
					_localctx.x.add(((ExprlistContext)_localctx).e.x);
					}
					}
					setState(126);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public int _p;
		public CubeXExpression x;
		public ExprContext e1;
		public Token op;
		public ExprContext e;
		public Token INT;
		public Token STRING;
		public Token var;
		public TypelistContext t;
		public ExprlistContext elist;
		public Token v;
		public ExprContext e2;
		public TerminalNode RBRACK() { return getToken(CubeXParser.RBRACK, 0); }
		public TerminalNode LBRACK() { return getToken(CubeXParser.LBRACK, 0); }
		public TerminalNode STAR() { return getToken(CubeXParser.STAR, 0); }
		public TerminalNode PERCENT() { return getToken(CubeXParser.PERCENT, 0); }
		public TerminalNode DASH() { return getToken(CubeXParser.DASH, 0); }
		public TerminalNode AMP() { return getToken(CubeXParser.AMP, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode LESSDOTDOT() { return getToken(CubeXParser.LESSDOTDOT, 0); }
		public TerminalNode PLUSPLUS() { return getToken(CubeXParser.PLUSPLUS, 0); }
		public TerminalNode RANGLEEQUAL() { return getToken(CubeXParser.RANGLEEQUAL, 0); }
		public TerminalNode LANGLE() { return getToken(CubeXParser.LANGLE, 0); }
		public TerminalNode BANGEQUAL() { return getToken(CubeXParser.BANGEQUAL, 0); }
		public TerminalNode LESSDOT() { return getToken(CubeXParser.LESSDOT, 0); }
		public TerminalNode EQUALEQUAL() { return getToken(CubeXParser.EQUALEQUAL, 0); }
		public TerminalNode INT() { return getToken(CubeXParser.INT, 0); }
		public TerminalNode BANG() { return getToken(CubeXParser.BANG, 0); }
		public TerminalNode DOTDOT() { return getToken(CubeXParser.DOTDOT, 0); }
		public TerminalNode DOTDOTDOT() { return getToken(CubeXParser.DOTDOTDOT, 0); }
		public TerminalNode NAMEL() { return getToken(CubeXParser.NAMEL, 0); }
		public TerminalNode TRUE() { return getToken(CubeXParser.TRUE, 0); }
		public TerminalNode DOTLESS() { return getToken(CubeXParser.DOTLESS, 0); }
		public TypelistContext typelist() {
			return getRuleContext(TypelistContext.class,0);
		}
		public TerminalNode LESSLESS() { return getToken(CubeXParser.LESSLESS, 0); }
		public ExprlistContext exprlist() {
			return getRuleContext(ExprlistContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(CubeXParser.LPAREN, 0); }
		public TerminalNode NAMEU() { return getToken(CubeXParser.NAMEU, 0); }
		public TerminalNode RPAREN() { return getToken(CubeXParser.RPAREN, 0); }
		public TerminalNode SLASH() { return getToken(CubeXParser.SLASH, 0); }
		public TerminalNode LANGLEEQUAL() { return getToken(CubeXParser.LANGLEEQUAL, 0); }
		public TerminalNode PIPE() { return getToken(CubeXParser.PIPE, 0); }
		public TerminalNode PLUS() { return getToken(CubeXParser.PLUS, 0); }
		public TerminalNode RANGLE() { return getToken(CubeXParser.RANGLE, 0); }
		public TerminalNode DOT() { return getToken(CubeXParser.DOT, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode FALSE() { return getToken(CubeXParser.FALSE, 0); }
		public TerminalNode STRING() { return getToken(CubeXParser.STRING, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExprContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState, _p);
		ExprContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, RULE_expr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(130);
				((ExprContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==BANG || _la==DASH) ) {
					((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(131); ((ExprContext)_localctx).e1 = expr(10);
				((ExprContext)_localctx).x =  (((ExprContext)_localctx).op!=null?((ExprContext)_localctx).op.getType():0)==DASH ? new CubeXFunctionCall(((ExprContext)_localctx).e1.x,"negative",null) : new CubeXFunctionCall(((ExprContext)_localctx).e1.x,"negate",null);
				}
				break;

			case 2:
				{
				setState(134); match(LPAREN);
				setState(135); ((ExprContext)_localctx).e = expr(0);
				setState(136); match(RPAREN);
				((ExprContext)_localctx).x =  ((ExprContext)_localctx).e.x;
				}
				break;

			case 3:
				{
				setState(139); match(TRUE);
				((ExprContext)_localctx).x =  new CubeXBoolean(true);
				}
				break;
